b=580345; fix up some GLESv2 vs. desktop GL differences; r=joe